Service layer refactor