@@ -3,22 +3,24 @@ package me.vladislav.homework.app.service;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import me.vladislav.homework.app.core.exception.db.repository.CourseNotFoundException;
+import me.vladislav.homework.app.core.exception.db.repository.UserNotFoundException;
+import me.vladislav.homework.app.db.orm.Course;
+import me.vladislav.homework.app.db.orm.User;
 import me.vladislav.homework.app.db.repository.CourseRepository;
 import me.vladislav.homework.app.db.repository.UserRepository;
 import me.vladislav.homework.app.dto.api.request.CourseCreateRequest;
 import me.vladislav.homework.app.dto.api.request.CoursePatchRequest;
 import me.vladislav.homework.app.dto.api.request.CourseUpdateRequest;
-import me.vladislav.homework.app.db.orm.Course;
-import me.vladislav.homework.app.dto.service.CourseData;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -32,76 +34,62 @@ public class CourseService {
    * Эта гарантия нужна для избежания дубликатов (создания курсов). Если же для обновления дубликат не критичен,
    * то для создания – может повлиять на логику работы приложения в худшую сторону.
    */
+  @Transactional
   public Optional<Course> addNewCourseForUser(Long userId, CourseCreateRequest course) {
     log.info("Adding new course for user {}", userId);
 
     if (processedIds.add(course.operationId())) {
-      Long courseId = courseRepository.create(new CourseData(course.title(), course.author(),
-          course.description(), course.duration()));
-      userRepository.addCourseId(userId, courseId);
-      log.info("Successfully added course with id {} for user {}", courseId, userId);
-      return Optional.of(courseRepository.getById(courseId));
+      Course savedCourse = courseRepository.save(
+          new Course(null, course.title(), course.author(), course.description(), course.duration()));
+      log.info("Successfully added course with id {} for user {}", savedCourse.getId(), userId);
+      return Optional.of(savedCourse);
     }
     return Optional.empty();
   }
 
   @Cacheable("CourseList")
+  @Transactional(readOnly = true, propagation = Propagation.SUPPORTS)
   public List<Course> getCoursesForUser(Long userId) {
     log.info("Retrieving courses for user {}", userId);
-    Set<Long> courseIds = userRepository.getCoursesIds(userId);
-    List<Course> courses = courseIds.parallelStream()
-        .map(courseRepository::getById)
-        .collect(Collectors.toList());
-    log.info("Successfully retrieved courses for user {}", userId);
-    return courses;
+
+    User user = userRepository.findUserWithCourses(userId).orElseThrow(UserNotFoundException::new);
+
+    log.info("Successfully retrieved {} courses for user {}", user.getCourses().size(), userId);
+    return user.getCourses().stream().toList();
   }
 
   public Course updateCourseForUser(Long userId, CourseUpdateRequest courseRequest) {
     log.info("Updating course {} for user {}", courseRequest.id(), userId);
 
-    Set<Long> userCourseIds = userRepository.getCoursesIds(userId);
-    if (!userCourseIds.contains(courseRequest.id())) {
-      throw new CourseNotFoundException();
-    }
+    Course course = courseRepository.save(new Course(courseRequest.id(), courseRequest.title(), courseRequest.author(), courseRequest.description(), courseRequest.duration()));
 
-    Course course = new Course(courseRequest.id(), courseRequest.title(), courseRequest.author(),
-        courseRequest.description(), courseRequest.duration());
-    Course updatedCourse = courseRepository.update(course);
-    log.info("Successfully updated course {} for user {}", course.id(), userId);
-    return updatedCourse;
+    log.info("Successfully updated course {} for user {}", course.getId(), userId);
+    return course;
   }
 
+  @Transactional
   public Course partiallyUpdateCourseForUser(Long userId, CoursePatchRequest courseRequest) {
     log.info("Partially updating course {} for user {}", courseRequest.id(), userId);
 
-    Set<Long> userCourseIds = userRepository.getCoursesIds(userId);
-    if (!userCourseIds.contains(courseRequest.id())) {
-      throw new CourseNotFoundException();
-    }
+    Course course = courseRepository.findById(courseRequest.id()).orElseThrow(CourseNotFoundException::new);
 
-    Course existingCourse = courseRepository.getById(courseRequest.id());
-    String newTitle = courseRequest.title() != null ? courseRequest.title() : existingCourse.title();
-    String newAuthor = courseRequest.author() != null ? courseRequest.author() : existingCourse.author();
-    String newDescription = courseRequest.description() != null ? courseRequest.description() : existingCourse.description();
-    Integer newDuration = courseRequest.duration() != null ? courseRequest.duration() : existingCourse.duration();
+    if (courseRequest.title() != null) course.setTitle(courseRequest.title());
+    if (courseRequest.author() != null) course.setAuthor(courseRequest.author());
+    if (courseRequest.description() != null) course.setDescription(courseRequest.description());
+    if (courseRequest.duration() != null) course.setDuration(courseRequest.duration());
 
-    Course course = new Course(courseRequest.id(), newTitle, newAuthor, newDescription, newDuration);
-    Course updatedCourse = courseRepository.update(course);
-    log.info("Successfully partially updated course {} for user {}", course.id(), userId);
-    return updatedCourse;
+    course = courseRepository.save(course);
+    log.info("Successfully partially updated course {} for user {}", course.getId(), userId);
+    return course;
   }
 
+  @Transactional
   public Course deleteCourseForUser(Long userId, Long courseId) {
     log.info("Deleting course {} for user {}", courseId, userId);
 
-    Set<Long> userCourseIds = userRepository.getCoursesIds(userId);
-    if (!userCourseIds.contains(courseId)) {
-      throw new CourseNotFoundException();
-    }
+    Course course = courseRepository.findById(courseId).orElseThrow(CourseNotFoundException::new);
+    courseRepository.delete(course);
 
-    Course course = courseRepository.getById(courseId);
-    courseRepository.delete(courseId);
-    userCourseIds.remove(courseId);
     log.info("Successfully deleted course {} for user {}", courseId, userId);
     return course;
   }
